[2012-06-23] It's all blue and I have not the slightest idea.
<br>
Well, the stats shows that 404 is now quite common.  The last router's reboot was 19 days ago and this seems to be the time where the spook began.
Perhaps my proxy is on holidays (out in the blue)?

[2012-06-16] Search engines overload
<br>
There are so many crawlers on my status.php page, that it is currently completely overloaded.
This was due to a bug that the crawlers saw too any valid status pages.  This now has been fixed.
To allow the stress to the database to settle more quickly the history view in the status page now shows blank line if the database is too busy.
This is not a bug, it is a workaround until I find a better solution to this issue.
Note that you can see another more detailed view of any eepsite by following the "h" link in the "info" column.

[2012-05-06] Autlearning works now
<br>
Restarted the "probeloop" script the hard way.
Forgot to do that before, such that the new autolearning sources were not used, because the old script still ran.
Now new destinations should start to pour in.

[2012-04-30] Autlearning enabled, somehow.
<br>
Still nothing is in the state which I want it to reach.  However to improve the situation,
autolearning of new destinations was enabled again, by adding the hosts.txt of my temporary router to autolearning.
<br>
This step is not to reduce the number of blue destinations which are still *unknown* in the router's addressbook.
In contrast this allows the inProxy to track all destinations *known* to the router's addressbook again.
<br>
Please note that this inProxy can reach destinations which are not shown in the overview but are known to the router's address book.
This is because the inProxy just hands any request to the router, and if the router can access it, it fetches it.
So all you see here on the web pages are just statistics.   It does not tell anything about the reality.