@@ -1,13 +1,4 @@
 <?
-# $Header: /home/tino/CVSROOT/i2pinproxy/status.php,v 1.2 2008/08/28 10:41:44 tino Exp $
-#
-# $Log: status.php,v $
-# Revision 1.2  2008/08/28 10:41:44  tino
-# Old URLs to i2p.net changed to links page
-#
-# Revision 1.1  2008/08/28 09:52:28  tino
-# Added
-
 include("showtable2.php");
 
 $search	= param("search",	'[-_.0-9a-z]*');
@@ -19,7 +10,7 @@ $hist	= param("hist",         '[-0-9]*',	28);
 <meta name="revisit-after" content="12 hours">
 <?
 $ni	= ($oktime!=5 || $hist!=28 || ( isset($_GET["order"]) && $_GET["order"]!='a.c_name'));
-head("($code)",$ni,($ni || $code=='' || substr($code,0,1)=="5"));
+head("($code)",$ni,($ni || $code=='' || substr($code,0,1)=="5" || substr($code,0,1)=="6"));
 ?>
 <a href="text.php"><img src="_.gif" alt="[text version of this page]" border=0 hspace=0 vspace=0 align=left></a>
 <?
@@ -31,7 +22,7 @@ showpeerwarning();
 if ($text):
   $textonly	= 0+$text;
 else:
-  $textonly	= ($code=="" || 0+$code==504) ? 1 : 0;
+  $textonly	= ($code=="" || 0+$code==504 || 0+$code==666) ? 1 : 0;
   if ($textonly):
 ?>
 (Automatic <b>text mode</b> to reduce page size.)
@@ -39,7 +30,8 @@ else:
 </p><p>
 <b>The status service is experimental</b>, it still has some bugs, so it might not be accurate.<br>
 Destinations listed under 0xx to 4xx are very likely to be reachable by this proxy.<br>
-Destinations listed under 5xx and are "very red" are probably down permanently.
+Destinations listed under 5xx and are "very red" are probably down permanently.<br>
+Destinations listed under 666 are missing in the router's addressbook.  (This currently does not work correctly, sorry.)
 </p>
 
 <H2>List of I2P eepsites grouped by code:</H2>
